@@ -80,7 +80,7 @@ class ChatRoomServiceTest {
         String updatedChatRoomName = "updatedRoom";
         String userName = "masterUserName";
         ChatRoom chatRoom =createChatRoom(chatRoomName, ChatRoomStatus.PUBLIC, ChatRoomPermission.MASTER);
-        User masterUser = createMasterUser(userId, userName);
+        User masterUser = createUser(userId, userName, DEFAULT_IMG_URL);
         // masterUser 설정
         chatRoom.setMasterUserInfo(masterUser);
 
@@ -129,39 +129,42 @@ class ChatRoomServiceTest {
     void findChatRoomMemberTest() {
         // given
         Long userId = 100L;
-        User user = createUser("user", DEFAULT_IMG_URL);
+        User user = createUser(userId, "user", DEFAULT_IMG_URL);
         ReflectionTestUtils.setField(user, "id", userId);
 
         Long user1Id = 1L;
-        User user1 = createUser("user1", "imageUrl1");
+        User user1 = createUser(user1Id, "user1", "imageUrl1");
         ReflectionTestUtils.setField(user1, "id", user1Id);
         ReflectionTestUtils.setField(user1, "role", "ROLE_USER");
         Friend.setFriend(user, user1);
 
         Long user2Id = 2L;
-        User user2 = createUser("user2", "imageUrl2");
+        User user2 = createUser(user2Id, "user2", "imageUrl2");
         ReflectionTestUtils.setField(user2, "id", user2Id);
         ReflectionTestUtils.setField(user2, "role", "ROLE_USER");
 
         Long user3Id = 3L;
-        User user3 = createUser("user3", "imageUrl3");
+        User user3 = createUser(user3Id, "user3", "imageUrl3");
         ReflectionTestUtils.setField(user3, "id", user3Id);
         ReflectionTestUtils.setField(user3, "role", "ROLE_USER");
 
         Long chatRoomId = 1L;
         ChatRoom chatRoom = createChatRoom("room", ChatRoomStatus.PUBLIC, ChatRoomPermission.MASTER);
-
-        UserChatRoom.setUserChatRoom(user, chatRoom, UserChatRoomStatus.ENTER);
-        UserChatRoom.setUserChatRoom(user1, chatRoom, UserChatRoomStatus.ENTER);
-        UserChatRoom.setUserChatRoom(user2, chatRoom, UserChatRoomStatus.ENTER);
-        UserChatRoom.setUserChatRoom(user3, chatRoom, UserChatRoomStatus.ENTER);
+        UserChatRoom userChatRoom = UserChatRoom.setUserChatRoom(user, chatRoom, UserChatRoomStatus.ENTER);
+        UserChatRoom userChatRoom1 = UserChatRoom.setUserChatRoom(user1, chatRoom, UserChatRoomStatus.ENTER);
+        UserChatRoom userChatRoom2 = UserChatRoom.setUserChatRoom(user2, chatRoom, UserChatRoomStatus.ENTER);
+        UserChatRoom userChatRoom3 = UserChatRoom.setUserChatRoom(user3, chatRoom, UserChatRoomStatus.ENTER);
+        List<UserChatRoom> enterUserChatRooms = Arrays.asList(userChatRoom, userChatRoom1, userChatRoom2, userChatRoom3);
 
         ReflectionTestUtils.setField(chatRoom, "id", chatRoomId);
 
         // when
-        when(chatRoomRepository.findById(chatRoomId)).thenReturn(Optional.of(chatRoom));
-        when(userRepository.findById(userId)).thenReturn(Optional.of(user));
-        when(friendRepository.findFriendsIdsFromUser(user)).thenReturn(Arrays.asList(1L));
+        when(userRepository.findById(userId))
+                .thenReturn(Optional.of(user));
+        when(friendRepository.findFriendsIdsFromUser(user))
+                .thenReturn(List.of(1L));
+        when(userChatRoomRepository.findEnterUserChatRoomsByChatRoomId(chatRoomId, UserChatRoomStatus.ENTER))
+                .thenReturn(enterUserChatRooms);
         List<ChatRoomMemberDto> findMembers = chatRoomService.findChatRoomMembers(chatRoomId, user.getId());
 
         // then
@@ -181,6 +184,49 @@ class ChatRoomServiceTest {
     }
 
     @Test
+    @DisplayName("채팅방 멤버 조회 시 UserChatRoom이 Enter 인 멤버만 조회되야함")
+    void findChatRoomMembers_WithStatusEnterOnly(){
+        // given
+        Long userId = 100L;
+        User user = createUser(userId, "user", DEFAULT_IMG_URL);
+
+        Long user1Id = 1L;
+        User user1 = createUser(userId, "user1", "imageUrl1");
+        ReflectionTestUtils.setField(user1, "id", user1Id);
+        ReflectionTestUtils.setField(user1, "role", "ROLE_USER");
+
+        Long user2Id = 2L;
+        User user2 = createUser(user2Id, "user2", "imageUrl2");
+        ReflectionTestUtils.setField(user2, "id", user2Id);
+        ReflectionTestUtils.setField(user2, "role", "ROLE_USER");
+
+        Long user3Id = 3L;
+        User user3 = createUser(user3Id, "user3", "imageUrl3");
+        ReflectionTestUtils.setField(user3, "id", user3Id);
+        ReflectionTestUtils.setField(user3, "role", "ROLE_USER");
+
+        Long chatRoomId = 1L;
+        ChatRoom chatRoom = createChatRoom("room", ChatRoomStatus.PUBLIC, ChatRoomPermission.MASTER);
+        ReflectionTestUtils.setField(chatRoom, "id", chatRoomId);
+        UserChatRoom ucr = UserChatRoom.setUserChatRoom(user, chatRoom, UserChatRoomStatus.ENTER);
+        UserChatRoom ucr1 = UserChatRoom.setUserChatRoom(user1, chatRoom, UserChatRoomStatus.ENTER);
+        UserChatRoom ucr2 = UserChatRoom.setUserChatRoom(user2, chatRoom, UserChatRoomStatus.LEAVE);
+        UserChatRoom ucr3 = UserChatRoom.setUserChatRoom(user3, chatRoom, UserChatRoomStatus.LEAVE);
+        List<UserChatRoom> enterUserChatRooms = Arrays.asList(ucr, ucr1);
+        // when
+        when(userChatRoomRepository.findEnterUserChatRoomsByChatRoomId(chatRoomId, UserChatRoomStatus.ENTER))
+                .thenReturn(enterUserChatRooms);
+        when(userRepository.findById(userId))
+                .thenReturn(Optional.of(user));
+        when(friendRepository.findFriendsIdsFromUser(user))
+                .thenReturn(new ArrayList<>()); // 친구 없는 상태
+        List<ChatRoomMemberDto> findMembers = chatRoomService.findChatRoomMembers(chatRoomId, user.getId());
+
+        // then
+        Assertions.assertThat(findMembers.size()).isEqualTo(2);
+    }
+
+    @Test
     @DisplayName("채팅방 상세조회 테스트")
     public void findChatRoomDetail(){
         //given
@@ -188,7 +234,7 @@ class ChatRoomServiceTest {
         Long userId = 1L;
         String chatRoomName = "room";
         String masterUserName = "masterUserName";
-        User user = createMasterUser(userId,masterUserName);
+        User user = createUser(userId,masterUserName,DEFAULT_IMG_URL);
         ChatRoom chatRoom = createChatRoom(chatRoomName, ChatRoomStatus.PUBLIC, ChatRoomPermission.MASTER);
         // ReflectionTestUtils 사용하면 필드값 임의로 지정가능
         ReflectionTestUtils.setField(chatRoom, "id", chatroomId);
@@ -212,8 +258,6 @@ class ChatRoomServiceTest {
         Assertions.assertThat(chatRoomDetailsDto.getMasterUserId()).isEqualTo(user.getId());
         Assertions.assertThat(chatRoomDetailsDto.getImageUrl()).isEqualTo(DEFAULT_IMG_URL);
         Assertions.assertThat(chatRoomDetailsDto.getMasterUserName()).isEqualTo(user.getUsername());
-
-
     }
 
     @Test
@@ -327,6 +371,38 @@ class ChatRoomServiceTest {
         Assertions.assertThat(user.getUserChatRoom().get(0).getStatus()).isEqualTo(UserChatRoomStatus.LEAVE);
     }
 
+    @Test
+    @DisplayName("방장인 아닌 유저가 채팅방 퇴장시 채팅방이 삭제되면 안됨")
+    void chatRoomNotDeletedWhenRegularUserExits(){
+        // given
+        // 방장
+        Long masterId = 1L;
+        User master = createUser(masterId, "master", DEFAULT_IMG_URL);
+        // 퇴장할 유저
+        Long userId = 2L;
+        User user = createUser(userId, "user", DEFAULT_IMG_URL);
+
+        Long chatRoomId = 1L;
+        ChatRoom chatRoom = createChatRoom("name", ChatRoomStatus.PUBLIC, ChatRoomPermission.MASTER);
+        ReflectionTestUtils.setField(chatRoom, "id", chatRoomId);
+        ReflectionTestUtils.setField(chatRoom, "masterUserId", masterId);
+        ReflectionTestUtils.setField(chatRoom, "masterUserName", master.getUsername());
+        ReflectionTestUtils.setField(chatRoom, "currentMemberCount", 2);
+        UserChatRoom masterUserChatRoom = UserChatRoom.setUserChatRoom(master, chatRoom, UserChatRoomStatus.ENTER);
+        UserChatRoom userChatRoom = UserChatRoom.setUserChatRoom(user, chatRoom, UserChatRoomStatus.ENTER);
+        // when
+        when(chatRoomRepository.findById(chatRoomId)).thenReturn(Optional.of(chatRoom));
+        when(userRepository.findById(userId)).thenReturn(Optional.of(user));
+        when(userChatRoomRepository.findByUserIdAndChatRoomId(userId, chatRoomId)).thenReturn(Optional.of(userChatRoom));
+
+        ChatRoomMemberStatus result = chatRoomService.leaveChatRoom(userId, chatRoomId);
+        // then
+        Assertions.assertThat(result).isEqualTo(ChatRoomMemberStatus.ACTIVE);
+        Assertions.assertThat(chatRoom).isNotNull();
+        Assertions.assertThat(chatRoom.getCurrentMemberCount()).isEqualTo(1);
+        Assertions.assertThat(chatRoom.getUserChatRooms().get(0).getUser().getId()).isEqualTo(masterId);
+    }
+
 
     @Test
     @DisplayName("유저 퇴장시 채팅방이 비어있다면 퇴장 시 ChatRoomMemberStatus.EMPTY 리턴")
@@ -399,8 +475,9 @@ class ChatRoomServiceTest {
         }
     }
 
-    public User createUser(String username, String imageUrl) {
+    public User createUser(Long userId, String username, String imageUrl) {
         User user = new User();
+        user.setId(userId);
         user.setUsername(username);
         user.setNickname("nickname");
 //        user.setPassword(bCryptPasswordEncoder.encode(password));
@@ -408,15 +485,6 @@ class ChatRoomServiceTest {
         user.setRole("ROLE_USER");
         user.setImageUrl(imageUrl);
         user.setStatus(UserStatus.PUBLIC);
-        return user;
-    }
-
-    public User createMasterUser(Long userId, String userName){
-        User user = new User();
-        ReflectionTestUtils.setField(user, "id", userId);
-        user.setUsername(userName);
-        user.setStatus(UserStatus.PUBLIC);
-
         return user;
     }
 
